# koishi-plugin-koidice

./: .gitignore  .gitmodules  PROJECT_STRUCTURE.md  QUICKJS_STATUS.md  QUICKJS_实现检查报告.md  README.md  REPORT.md  VERIFICATION_SUMMARY.md  biome.json  package.json  rolldown.config.js
scripts/: build-wasm.ps1  build-wasm.sh
src/: commands.ts  config.ts  database.ts  index.ts
src/commands/: anko.ts  character.ts  check.ts  coc.ts  deck.ts  dnd.ts  extension.ts  game.ts  index.ts  initiative.ts  insanity.ts  observer.ts  pc.ts  roll.ts  rule.ts  settings.ts  wod.ts
src/commands/character/: index.ts  parser.ts  st-clr.ts  st-del.ts  st-set.ts  st-show.ts  st-switch.ts  types.ts
src/commands/pc/: index.ts  pc-build.ts  pc-clr.ts  pc-cpy.ts  pc-del.ts  pc-grp.ts  pc-list.ts  pc-new.ts  pc-nn.ts  pc-redo.ts  pc-show.ts  pc-stat.ts  pc-tag.ts
src/data/: rules.ts
src/services/: character-service.ts  extension-service.ts  game-session-service.ts
src/services/character/: card-binding.ts  card-operations.ts  card-stats.ts  index.ts
src/services/extension/: command-registry.ts  index.ts  rulebook-loader.ts  script-wrapper.ts  template-parser.ts  types.ts
src/utils/: logger.ts  path.ts  storage.ts
src/wasm/: adapter.ts  index.ts  loader.ts  types.ts
wasm/: CMakeLists.txt  test_parse.cpp
wasm/include/: DDAPI.h  dice_wasm_types.h  tinyxml2.h
wasm/include/yaml-cpp/: yaml.h
wasm/src/: dice_character.cpp  dice_character.h  dice_character_parse.cpp  dice_character_parse.h  dice_deck.cpp  dice_deck.h  dice_initiative.cpp  dice_initiative.h  dice_insanity.cpp  dice_insanity.h  dice_roll.cpp  dice_roll.h  dice_rule.cpp  dice_rule.h  dice_wasm_bindings.cpp  dice_wasm_interface.cpp  version.h.in
wasm/src/bindings/: wasm_bindings.cpp
wasm/src/core/: check_handler.cpp  check_handler.h  command_processor.cpp  command_processor.h  roll_handler.cpp  roll_handler.h  utf8_utils.cpp  utf8_utils.h  utils.cpp  utils.h
wasm/src/extensions/: extension_manager.cpp  extension_manager.h  js_support.cpp  js_support.h  lua_support.cpp  lua_support.h
wasm/src/features/: character.cpp  character.h  character_parser.cpp  character_parser.h  deck.cpp  deck.h  initiative.cpp  initiative.h  insanity.cpp  insanity.h  rule.cpp  rule.h
wasm/src/types/: common_types.h
